@@ -1,3 +1,12 @@
+Sun Aug 22 11:07:41 1999  Alexandre Petit-Bianco  <apbianco@cygnus.com>
+
+	* parse.y (check_method_redefinition): Changed leading comment.
+	(check_abstract_method_definitions): New function.
+	(java_check_abstract_method_definitions): New function.
+	(java_check_regular_methods): Call it.
+	(verify_constructor_super): Fixed indentation.
+	(lookup_method_invoke): Likewise.
+
 Thu Aug 19 10:26:18 1999  Alexandre Petit-Bianco  <apbianco@cygnus.com>
 
 	* parse.y (method_header): Return a null pointer if the current
